--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -132,7 +132,7 @@ slots:
     annotations:
       Expected_value: ontology term; text
     description: >-
-      The geological epoch approximating to the period in which the specimen or sample existed in. Where possible use terms from ontologies.
+      The geological epoch approximating to the period within which the specimen or sample existed. Where possible use terms from ontologies.
     title: geological epoch
     examples:
       - value: "Pleistocene"
@@ -265,7 +265,7 @@ slots:
     recommended: true
   lib_preparation_protocol:
     description: >-
-      Citation(s) for the nucleic acid library preparation protocol
+      Citation(s) for the nucleic acid library preparation protocol.
     title: library preparation protocols
     examples:
       - value: doi:10.1093/nar/gkr771
@@ -692,13 +692,13 @@ slots:
     recommended: true
   site_name:
     annotations:
-      Expected_value: Name of site of location where sample was collected
+      Expected_value: Name of site or location where sample was originated
     description: >-
       Designated name of the archaeological, ecological (or similar) site, ancient settlement, or location where the sample was originally collected.
-      Can be a non-geographical name, such as a field-specific name or code, such as the official name of an excavation or a colloquial name that is used in academic literature.
+      Can be a non-geographical name, such as a field-specific name or code, the official name of an excavation, or a colloquial name that is used in academic literature.
       Typically names that would not be found on official maps.
       Can also include different transliterations or languages used in the literature.
-    title: Name of site or location where sample was originally collected
+    title: Name of site or location where sample originated
     examples:
       - value: "Valley of the Kings"
       - value: "Krakow Spadzista B"
