--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -694,7 +694,7 @@ slots:
     annotations:
       Expected_value: Name of site or location where sample was originated
     description: >-
-      Designated name of the archaeological, ecological (or similar) site, ancient settlement, or location where the sample was originally collected.
+      Designated name of the archaeological or ecological site, ancient settlement, or location etc. where the sample was originally collected.
       Can be a non-geographical name, such as a field-specific name or code, the official name of an excavation, or a colloquial name that is used in academic literature.
       Typically names that would not be found on official maps.
       Can also include different transliterations or languages used in the literature.
