--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -504,15 +504,20 @@ slots:
     required: false
     recommended: true
   past_env_broad:
-    description: "Report information about past broad environmental system the sample or specimen came from. The system(s) identified should provide the general environmental context of where the sample was burried (e.g. in the desert or a rainforest). We recommend using subclasses of EnvO s biome class:  http://purl.obolibrary.org/obo/ENVO_00000428. EnvO documentation about how to use the field: https://github.com/EnvironmentOntology/envo/wiki/Using-ENVO-with-MIxS"
+    description: >-
+      Report information about the general ancient broad environmental system that the sample or specimen existed or lived within, as it was at the time of deposition or burial (e.g. in the desert or a forest).
+      This should not describe the environment as it is today (e.g. farmland), but specifically the state as it was in the past (i.e. the palaeo- or (pre)historical ecosystem).
+      Compared to `env_broad_scale` which is taken from direct observation, the information about the past environment will normally be derived from inference from archaeological, palaeontological, geological, or other scientific methods.
+      We recommend using subclasses of EnvO s biome class:  http://purl.obolibrary.org/obo/ENVO_00000428.
+      EnvO documentation about how to use the field for present day equivalents: https://github.com/EnvironmentOntology/envo/wiki/Using-ENVO-with-MIxS"
     title: broad-scale past environmental context
     examples:
-       - value: "dessert biome [ENVO:01000247]"
+      - value: "dessert biome [ENVO:01000247]"
     in_subset:
-        - environment
+      - environment
     keywords:
-        - context
-        - environmental
+      - context
+      - environmental
     slot_uri: "MIXS:0000012"
     range: string
     required: true
@@ -523,8 +528,14 @@ slots:
     partial_match: true
   past_env_local:
     annotations:
-      Expected_value: Report information about smaller environmental entities having causal influences upon the sample or speciment at/during the time of burial
-    description: "Report the entity or entities which are in the sample or specimen s local vicinity and which you believe have significant causal influences on your sample or specimen. We recommend using EnvO terms which are of smaller than your entry for past_env_broad_scale. Terms, such as anatomical sites, from other OBO Library ontologies which interoperate with EnvO (e.g. UBERON) are accepted in this field. EnvO documentation about how to use the field: https://github.com/EnvironmentOntology/envo/wiki/Using-ENVO-with-MIxS"
+      Expected_value: Report information about smaller environmental entities having causal influences upon the sample or specimen at/during the time of burial
+    description: >-
+      Report information about the smaller-scale environmental system of the local vicinity of the sample or specimen at the time of deposition or burial (e.g. in hillside, burial mound, or midden).
+      This should not describe the environment as it is today (e.g. carpark), but specifically the entity or entities surrounding the sample that may have significant causal influences as it was in the past.
+      Compared to `env_local_scale` which is taken from direct observation, the information about the past environment will normally be derived from inference from archaeological, palaeontological, geological, or other scientific methods.
+      We recommend using EnvO terms which are of smaller than your entry for past_env_broad.
+      Terms, such as anatomical sites, from other OBO Library ontologies which interoperate with EnvO (e.g. UBERON) are accepted in this field.
+      EnvO documentation about how to use the field for present day equivalents: https://github.com/EnvironmentOntology/envo/wiki/Using-ENVO-with-MIxS"
     title: local past environmental context
     examples:
       - value: "hillside [ENVO:01000333]"
@@ -533,7 +544,7 @@ slots:
     keywords:
       - context
       - environmental
-    string_serialization: '{termLabel} [{termID}]'
+    string_serialization: "{termLabel} [{termID}]"
     slot_uri: "MIXS:0000013"
     required: true
   samp_alt_lab_ids:
